# Analytics-dashboard

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  generate_realistic_data.py
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: main.py
backend/app/analytics/: engine.py  forecasting.py  recommendations.py
backend/app/api/: deps.py
backend/app/api/v1/: analytics.py  auth.py  cleaning.py  forecasting.py  recommendations.py  upload.py
backend/app/core/: config.py  database.py  db_utils.py  security.py
backend/app/models/: __init__.py  dataset.py  forecast.py  sales_record.py  user.py
backend/app/schemas/: auth.py  cleaning.py  upload.py
backend/app/services/: cleaning_service.py  upload_service.py
backend/tests/: conftest.py  test_analytics.py  test_auth.py  test_cleaning_service.py  test_forecasting.py  test_health.py  test_upload_api.py  test_upload_service.py
frontend/: index.html  package-lock.json  package.json  postcss.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: CategoryChart.tsx  CategoryMiniBars.tsx  ConfirmModal.tsx  KpiCard.tsx  Layout.tsx  ProductsTable.tsx  SalesTrendsChart.tsx
frontend/src/lib/: api.ts  format.ts
frontend/src/pages/: Dashboard.tsx  Forecast.tsx  Login.tsx  Recommendations.tsx  Register.tsx  Upload.tsx
frontend/src/services/: analytics.ts  auth.ts
frontend/src/store/: auth.ts  currency.ts  dataset.ts
