[project]
name = "demandiq-backend"
version = "0.1.0"
description = "AI Demand Analytics Platform - Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.12",
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "openpyxl>=3.1.0",
    "statsmodels>=0.14.0",
    "httpx>=0.28.0",
    "pglite>=1.0.14",
    "pyzstd>=0.19.1",
    "aiosqlite>=0.22.1",
    "scipy>=1.18.0",
    "bcrypt<4.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "httpx>=0.28.0",
]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ARG", "C4"]
ignore = ["B008"]  # FastAPI requires Depends() in default args

[tool.ruff.format]
quote-style = "single"

[tool.mypy]
strict = true
python_version = "3.14"
ignore_missing_imports = true
exclude = ["alembic/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
addopts = "-v --cov=app --cov-report=term-missing"

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "alembic/*"]
